<resources>
    <string name="app_name">ProgettoPM</string>
    <string name="login">Login</string>
    <string name="email"> Email</string>
    <string name="password"> Password </string>
    <string name="register"> Register </string>
    <string name="logout">logout</string>
    <string name="go_to_register">Non hai un account? Registrati</string>
    <string name="go_to_login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open </string>
    <string name="close">Close</string>
    <string name="format_budget">Budget: %d crediti</string>
    <string name="giocatori_rimasti">Giocatori rimasti: %d</string>
    <string name="somma_valori">Somma valori: %d</string>
    <string name="aggiungi_giocatore">Aggiungi Giocatore"</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="conferma">Conferma</string>
    <string name="valore">Valore</string>
    <string name="foto_giocatore">Foto</string>
    <string name="scegli_foto">Scegli foto</string>
    <string name="nome_del_bonus">Nome del bonus</string>
    <string name="aggiungi_nuova_giornata">Aggiungi giornata</string>
    <string name="modifica_lega">Modifica Lega</string>
    <string name="gestione_bonus">Gestione Bonus</string>
    <string name="calendario">Calendario</string>
    <string name="gestione_giocatori">Gestione Giocatori</string>
    <string name="aggiungi_bonus_giornata">Aggiungi Bonus Giornata</string>
</resources>